tests/sema/golden/13_unknown_type.out
tests/sema/bad/13_unknown_type.sg:1:1: error: unknown declared type
  let x:Foo = 1;  // неизвестный тип (если нет typedef Foo)
  ^
